2006-09-10  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): Fix the use of the
	Symbol font in non-enhanced mode, a peace of code was not pasted
	properly.

2006-09-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc: Sync Japanese documentation to recent changes in
	English files. SF Patch [1519215], rev.1.385.

2006-09-01  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c (string_expand): Fix segfault if a truly enormous string
	is to be used as an input line.

2006-09-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Edits of the "What is new in gnuplot 4.2".

	* docs/gnuplot.doc term/x11.trm: Comments on 'raise' does not raise.

2006-08-30  Harald Harders  <h.harders@tu-bs.de>

	* src/graphics.c (place_arrows): Allow for terminal-specific clipping,
	exactly as done elsewhere in the code.

2006-08-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_plot): The border attribute of fill style was
	ignored by filledcurves. Change this to match all other places where
	fillstyle is honored.

2006-08-28  Lars Hecking  <lhecking@users.sourceforge.net>

	* prepare: Allow importing auto* tools from the environment.

2006-08-26  Ethan A Merritt  <merritt@u.washington.edu>

	Fix program errors revealed by issuing the command sequence
	   set termoption font 'face,size'; show term
	   set termoption font 'face'; show term
	to all terminal types.

	* term/gd.trm term/svg.trm term/tgif.trm:  Accept comma-separated font
	face, size. Reset to default font size if no size information is given.

	* term/tkcanvas.trm: Fix infinite loop if unrecognized terminal option.

2006-08-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Increment the current point even if its
	value is undefined.  This allows grid spacing to be maintained, and
	correctly handles `splot ... using ($1):($2):($3)`.
